   - Add a rule to maximize all new windows with type normal.
   - Place new windows on the monitor with the mouse, rather than the primary
     monitor.
   - Use scrot -u -b (focused window with border) for the screenshot of the 
     current window.
   - Add a shortcut for the power button.
   - Use horizontal presentation of the alt-tab.
  * usr/bin/startlubuntu* & usr/share/lubuntu/xscreensaver/xscreensaver:
   - Add a custom configuration file for xscreensaver, with blank mode by
     default (LP: #578789).
   - Don't append /etc/xdg in xdg path, already done by Xsession.d
   - Start gnome-keyring support for ssh before the session. Thanks urusha for
     the patch (LP: #664206).

 -- Julien Lavergne <gilir@ubuntu.com>  Tue, 15 Nov 2011 13:47:32 +0700

lubuntu-default-settings (0.22) precise; urgency=low

  * Add a theme for lightdm (taking from Xubuntu, thanks Lionel Le Folgoc).
  * Add etc/xdg/lubuntu/lightdm/lightdm-gtk-greeter.conf
  * debian/{postinst,prerm}: install/remove alternatives to use our config
    as /etc/lightdm/lightdm-gtk-greeter.conf.
  * debian/control:
   - add depends on lightdm-gtk-greeter >= 1.0.0-0ubuntu2.
   - provides lightdm-gtk-greeter-config.
   - Bump build-depends of debhelper for overrides support.
  * debian/source/format:
   - Switch to format 3.0 (native).
  * debian/rules:
   - Switch to dh syntax.

 -- Julien Lavergne <gilir@ubuntu.com>  Tue, 08 Nov 2011 20:00:37 +0100

lubuntu-default-settings (0.21) oneiric; urgency=low

  * debian/postinst,debian/postrm: set Lubuntu as the default session and
    lightdm-gtk-greeter as the default greeter if they aren't set already.
    Remove them on uninstall. (thanks Didier and Lionel !)
  * etc/xdg/lubuntu/lxdm/lxdm.conf:
   - Fix location of the background.
  * usr/bin/startlubuntu* & usr/share/lubuntu/leafpad/
   - Install specific settings for leafpad, with Ubuntu font by default.
  * etc/xdg/pcmanfm/pcmanfm.conf:
   - Use Ubuntu font by default.