@@ -10,6 +10,7 @@ lubuntu-default-settings (0.23) UNRELEASED; urgency=low
      current window.
    - Add a shortcut for the power button.
    - Use horizontal presentation of the alt-tab.
+   - Add a shortcut to lock the screen (LP: #912499)
   * usr/bin/startlubuntu* & usr/share/lubuntu/xscreensaver/xscreensaver:
    - Add a custom configuration file for xscreensaver, with blank mode by
      default (LP: #578789).
